# OdooAdamas

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  test.txt
.agents/docs/: PRD.md  api_specs.md  architecture.md  attendance_plan.md  authentication_plan.md  employees_plan.md  sqlmodel_orm.md  time_off_plan.md
.github/workflows/: lint-format.yml
Rag/: ingest.py  vector_store.py
Rag/agent/: agentstate.py  main.py
Rag/data/chroma_db/: chroma.sqlite3
Rag/prompts/: policy_prompt.py  system_prompt.py
app/: __init__.py  main.py  models.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: attendance.py  auth.py  employees.py  leaves.py  payroll.py  timeoff.py  users.py  webhooks.py
app/core/: __init__.py  db.py  dependencies.py  security.py  utils.py
app/schemas/: attendance.py  auth.py  employees.py  leave.py  payroll.py  timeoff.py  user.py  webhook.py
hrms-frontend/: index.html  package-lock.json  package.json  vite.config.js
hrms-frontend/hooks/: useAuth.js
hrms-frontend/routes/: AppRoutes.jsx
hrms-frontend/src/: App.jsx  index.css  main.jsx
hrms-frontend/src/auth/: login.jsx  signup.jsx
hrms-frontend/src/auth/routes/: ProtectedRoute.jsx
hrms-frontend/src/auth/utils/: loginIdGenerator.js
hrms-frontend/src/context/: HRMSContext.jsx
hrms-frontend/src/pages/Attendance/: Attendance.jsx
hrms-frontend/src/pages/Auth/: Login.jsx  Signup.jsx
hrms-frontend/src/pages/Dashboard/: AdminDashboard.jsx  Dashboard.jsx  EmployeeDashboard.jsx
hrms-frontend/src/pages/Leave/: LeavePage.jsx
hrms-frontend/src/pages/Payroll/: Payroll.jsx
hrms-frontend/src/pages/Profile/: Profile.jsx
hrms-frontend/src/routes/: AppRoutes.jsx
tests/: conftest.py  test_utils.py
