[project]
name = "odoo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.7.0",
    "svix>=1.24.0",
    "cryptography>=42.0.0",
    "pyjwt>=2.8.0",
]

[tool.ruff]
# Target modern Python environment, format with standard 88-character line length
line-length = 88
target-version = "py312"

[tool.ruff.lint]
# Enable pycodestyle (E, W), Pyflakes (F), and isort (I) for import sorting
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Allow unused imports in __init__.py files
"__init__.py" = ["F401"]


[dependency-groups]
dev = [
    "ruff>=0.15.20",
]

