[project]
name = "odoo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "pydantic[email]>=2.7.0",
    "passlib[bcrypt]>=1.7.4",
    "cryptography>=42.0.0",
    "pyjwt>=2.8.0",
    "sqlmodel>=0.0.22",
    "python-dotenv>=1.0.1",
    "psycopg2-binary>=2.9.9",
    "langchain>=0.3.0",
    "langgraph>=0.4.0",
    "langchain-openai>=0.3.0",
    "langchain-chroma>=0.2.0",
    "langchain-community>=0.3.0",
    "pypdf>=5.0.0",
]

[tool.ruff]
# Target modern Python environment, format with standard 88-character line length
line-length = 88
target-version = "py312"

[tool.ruff.lint]
# Enable pycodestyle (E, W), Pyflakes (F), and isort (I) for import sorting
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Allow unused imports in __init__.py files
"__init__.py" = ["F401"]


[dependency-groups]
dev = [
    "ruff>=0.15.20",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.23.0"
]

